# PimpMyRice

./: .gitignore  CONTRIBUTING.md  LICENSE  PKGBUILD  README.md  flake.nix  mypy.ini  pyproject.toml  pytest.ini  setup.py
.github/workflows/: release.yaml  test.yaml
src/pimpmyrice/: __init__.py  __main__.py  args.py  cli.py  colors.py  completions.py  config.py  doc.py  edit_args.py  events.py  files.py  keywords.py  logger.py  module.py  module_utils.py  parsers.py  schemas.py  server.py  theme.py  theme_utils.py  utils.py  venv.py
tests/: test_theme.py
